# system-programming

./: .gitignore  CMakeLists.txt  README.md  fileList.txt
fileIO/: advancedcp.c  checkfile.c  duplic.c  ex52.c  ex53.c  ex54.c  maketemp.c  scatterinput.c  seek_io.c  simplecopy.c  simpletee.c  t.txt  test2.txt  testdescriptors.c
fileIO/error_code/: err  err.c
fileIO/txt/: f2.txt  numbers.txt  outnumbers.txt
glibc_code/: glibcversioncheck.c  out
includes/: error_functions.c  error_functions.h  get_num.c  get_num.h  utils.h  utils.h.gch
memory_mappings/: anon_mmap.c  mmcat.c  mmcp.c  t_mmap.c
portability/: ftm  ftm.c
practice_exercises/: Makefile  README.md  practice.c  practice.h  test  wordcount.c
practice_exercises/tests/: check_practice.c
process/: ex63.c  getEnvs.c  getFuncName.c  jumps.c  mem_segment.c  simple_env.c
